src/index.css
html {
  height: 100%;
  width: 100%;
  font-size: 62.5%;
  box-sizing: border-box;
  margin-bottom: 0;
}

* {
  margin: 0;
  padding: 0;
}

*, 
*::after
*::before {
  box-sizing: inherit;
}

body {
  height: 100%;
  width: 100%;
  font-family: 'Montserrat', sans-serif;
  overflow-x: hidden;
  
}



#root {
  height: 100%;
  width: 100%;
  margin-bottom: 0;
  
  
}



code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

